# rustapi

./: .env  .gitignore  Cargo.toml  README.md  build.rs  users.db
.cargo/: .config.toml.swp  config.toml
.github/workflows/: build.yml  compile  compile.yml  rust.yml
.sqlx/: database.json
migrations/: 20240214_create_users_table.sql
src/: build.rs  main.rs
