[package]
name = "rust-actix-sqlite-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
sqlx = { version = "0.8.2", features = [ "runtime-tokio","sqlite","migrate","macros" ]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
